2004-01-06 Stable Version 1.0.1 released
--------------------------------------
2003-12-01 	Brian Stafford	<brian@stafford.uklinux.net>
      * smtp-tls.c examples/mail-file.c
	Applied patch from Pawel Salek.

      * smtp-tls.c
        Fixed typo in check_file() which prevented it from doing quite
	the right thing.
	The domain name check for the server certificate is now implemented
	using the wildcard match described in RFC 2818.
	Check_file() and check_directory() return different values for
	unusable vs absent files.

2003-09-12 Stable Version 1.0.1 released
--------------------------------------
2003-09-11 	Brian Stafford	<brian@stafford.uklinux.net>
      * protocol.c smtp-auth.c smtp-bdat.c smtp-etrn.c smtp-tls.c
	More thoroughly check return value from read_smtp_response().

      * libesmtp.h errors.c
        Added new "Client error" error code.  This is just a cop-out,
        used when an API called by libesmtp fails.

      * base64.c
	Make conversions immune to NULL source data,

      * examples/mail-file.c
	Cleaned up some compiler warnings

2003-09-02 	Brian Stafford	<brian@stafford.uklinux.net>
      * siobuf.[hc]
	Added a few extra sio_ calls.  Not actually used in libESMTP though.

2003-07-29 	Brian Stafford	<brian@stafford.uklinux.net>
      * concatenate.c errors.c getaddrinfo.c headers.c htable.c
      * protocol.c siobuf.c
	Don't perform zero length operations using the memxxx() functions.
	This may avoid segfaults on some platforms or libraries.

      * siobuf.c
        Improved handling of flushes in sio_write() particularly in the
        case where data would exactly fill remaining space in the buffer.

2003-07-27 	Brian Stafford	<brian@stafford.uklinux.net>
      * rfc2822date.c
	Correct leap year compensation for January and February in
	libesmtp_mktime().

2003-07-27 	Brian Stafford	<brian@stafford.uklinux.net>
      * examples/Makefile
	Changed compiler flags from -ansi to -std=c99 and added -W
